fixed horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   height: 100%;
+  overflow-x: hidden; /* prevents sideways scrolling */
   font-family: Arial, Helvetica, sans-serif;
   background: linear-gradient(to right, #4facfe, #00f2fe);
 
